--- a/app/taskDetail/style.css
+++ b/app/taskDetail/style.css
@@ -125,7 +125,8 @@
 }
 
 #pending-buttons {
-    margin: auto;
+    margin-left: 25px;
+    margin-top: 15px;
 }
 
 .detail-list > * + * {
